# placeholder_closure

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lambda.rs  lib.rs
