[package]
name = "placeholder_closure"
version = "0.0.0"
edition = "2018"
license = "CC0-1.0"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.10"
quote = "1.0.3"
rustversion = "1.0.5"
syn = { version = "1.0.17", features = ["full"] }

[dev-dependencies]
atcoder-202004-lock = { git = "https://github.com/qryxip/atcoder-202004-lock" }
